--- a/views/register.html
+++ b/views/register.html
@@ -11,6 +11,37 @@
         <link rel = "stylesheet" href = "css/register.css">
     </head>
 <body>
+    <header class="main-header">
+        <div class="main-header-top-bar"> 
+            <div class="logo-buscador">
+                <img src = "img/logo-mercado-liebre.svg" class = "logo">
+                <div class="buscador">
+                    <input type="text" placeholder="Buscar productos, marcas"><button><i class="fas fa-search"></i></button>
+                </div>
+            </div>
+            <h2 class="copy-header">
+                <i class = "fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito
+            </h2>
+        </div>
+        <nav class="main-navbar">
+            <ul> 
+                <li><a href = "#">Ofertas</a></li>
+                <li><a href = "#">Tiendas Oficiales</a></li>
+                <li><a href = "#">Vender</a></li>
+                <li><a href = "#">Ayuda</a></li>
+            </ul>
+
+            <ul>
+                <li><a href = "/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href = "/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href = "#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+            </ul>
+        </nav>
+        <a href="#" class="burger-menu"> 
+                <i class="fas fa-bars"></i>
+        </a>
+    </header>
+
     <form action="/" method="POST">
         <div class="detalles">
             <label for="nombreyapellido"></label>
@@ -89,5 +120,27 @@
             <button type="reset">Borrar</button>
         </div>
     </form>
+    <footer>
+        <div class="dividiendo-el-footer">
+            <article><i class="fas fa-credit-card fa-2x" style="color:#1259c3;"></i>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en 
+                puntos de pago. ¡Y siempre es seguro!</p>
+            </article>
+    
+            <article><i class="fas fa-gift fa-2x" style="color:#1259c3;"></i>
+            <h3>Envío gratis desde $ 2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+            </article>
+    
+            <article><i class="fas fa-user-shield fa-2x" style="color:#1259c3;"></i>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+            </article>
+        </div>
+            <p class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        </footer>
 </body>
 </html>
