--- a/views/home.html
+++ b/views/home.html
@@ -28,6 +28,7 @@
             <ul> 
                 <li><a href = "#">Ofertas</a></li>
                 <li><a href = "#">Tiendas Oficiales</a></li>
+                <p>HOLAAAAA</p>
                 <li><a href = "#">Vender</a></li>
                 <li><a href = "#">Ayuda</a></li>
             </ul>
